resolved a spacing issue since the addition of the footer, also added scroll-to-top behaviour each time a component renders

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -205,7 +205,7 @@ form .help-block {
 .next-round {
     margin: auto;
     text-align: center;
-    padding: 10px 20px 40px;
+    padding: 10px 20px 100px;
 }
 
 .next-round .btn {
